--- a/assets/sass/partials/_components.scss
+++ b/assets/sass/partials/_components.scss
@@ -79,8 +79,10 @@ input[type="search"]{
     color: $black;
     padding: 0.3em;
     cursor: pointer;
-    &:hover{
-      background-color: rgba(255, 255, 255, 1);
+    @include breakpoint(desktop) {
+      &:hover {
+        background-color: rgba(255, 255, 255, 1);
+      }
     }
   }
 }
